tests/lifetime_alloc_infer_error.june
// error: is not an allocator

struct Stats {
    age: i64
}

struct Employee {
    name: string,
    stats: shared Stats,
}

fun helper(mut employee: shared Employee) {
    employee.stats = new shared Stats(age: 33)
}

fun main() {
    mut employee = new shared Employee(name: "Sophia", stats: new shared Stats(age: 22))

    helper(employee)

    println(employee.stats.age)
}